[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/items/scenes/TrapInst.gd" type="Script" id=1]
[ext_resource path="res://assets/trap_spritesheet.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 47, 38 )

[node name="TrapInst" type="Sprite"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
offset = Vector2( 0, -50 )
hframes = 2
region_rect = Rect2( 0, 0, 60, 60 )
script = ExtResource( 1 )

[node name="TrapArea" type="Area2D" parent="."]

[node name="TrapCollision" type="CollisionShape2D" parent="TrapArea"]
position = Vector2( 0, -38 )
shape = SubResource( 1 )

[node name="TimerDispose" type="Timer" parent="."]
wait_time = 15.0
one_shot = true
autostart = true

[node name="Tween" type="Tween" parent="."]

[connection signal="area_entered" from="TrapArea" to="." method="_on_TrapArea_area_entered"]
[connection signal="timeout" from="TimerDispose" to="." method="_on_TimerDispose_timeout"]
